examples/pod-annotations.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-annotation-pod
  annotations:
    owner: dude@academy.com
    git-commit: bdab0c6
spec:
  containers:
    - name: nginx
      image: nginx
