examples/pod-configMapData.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-configmap-pod
spec:
  containers:
    - name: myapp-container
      image: busybox
      command: ['sh', '-c', "echo $(MY_VAR) && sleep 3600"]
