examples/pod-container-labels.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-production-label-pod
  labels:
    app: my-app
    environment: production
spec:
  containers:
    - name: nginx
      image: nginx
